--- a/UnitTestApiDemo/Base.lproj/Main.storyboard
+++ b/UnitTestApiDemo/Base.lproj/Main.storyboard
@@ -32,6 +32,9 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Get Weather"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Get Weather"/>
+                                <connections>
+                                    <action selector="tapGetWeather:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bA0-ST-sek"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -44,6 +47,9 @@
                             <constraint firstItem="NcF-MV-9X5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="p2R-fh-anr"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="lblTemperature" destination="NcF-MV-9X5" id="PDL-As-9RD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
